methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var biscuit=0
  while (estFaceMur()==false){
    if (estSurBiscuit()==true){
      biscuit=biscuit+1
      avance()
      
    } else {
      avance()
    }
  }recule(6)
  if (biscuit=>1){
    return true
  } else {
    return false
  }
}
